documentation/website/versioned_docs/version-0.66.0/pe/org.apache.streampipes.processors.aggregation.flink.count.md
---
id: version-0.66.0-org.apache.streampipes.processors.aggregation.flink.count
title: Count Aggregation
sidebar_label: Count Aggregation
original_id: org.apache.streampipes.processors.aggregation.flink.count
---

<!--
  ~ Licensed to the Apache Software Foundation (ASF) under one or more
  ~ contributor license agreements.  See the NOTICE file distributed with
  ~ this work for additional information regarding copyright ownership.
  ~ The ASF licenses this file to You under the Apache License, Version 2.0
  ~ (the "License"); you may not use this file except in compliance with
  ~ the License.  You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->



<p align="center"> 
    <img src="/docs/img/pipeline-elements/org.apache.streampipes.processors.aggregation.flink.count/icon.png" width="150px;" class="pe-image-documentation"/>
</p>

***

## Description

Performs an aggregation based on a given field and outputs the number of occurrences.
Example: Count the number of vehicle positions per vehicleId.
The Count aggregation requires a time window, used to perform the count aggregation and a field used to aggregate
 values.

***

## Required input


***

## Configuration

Describe the configuration parameters here

### 1st parameter


### 2nd parameter

## Output